--- a/Registry.toml
+++ b/Registry.toml
@@ -2134,6 +2134,7 @@ some amount of consideration when choosing package names.
 803aa692-84f0-5eed-9cc1-fbb46710dded = { name = "RiemannTheta", path = "R/RiemannTheta" }
 804faec8-72f5-11ea-307d-47b816e9b733 = { name = "Skyler", path = "S/Skyler" }
 80713f31-8817-5129-9cf8-209ff8fb23e1 = { name = "ImageSegmentation", path = "I/ImageSegmentation" }
+807e6dab-69e6-5de1-b50c-dbd9513c50df = { name = "SerialDependence", path = "S/SerialDependence" }
 8086fd22-9a0c-46a5-a6c8-6e24676501fe = { name = "DynamicSparseArrays", path = "D/DynamicSparseArrays" }
 809d7502-0c9d-5bc2-962a-5201dc498f73 = { name = "InlineExports", path = "I/InlineExports" }
 80a8ab25-5750-5d93-a6d7-4adc97cdd5fb = { name = "MultipleScattering", path = "M/MultipleScattering" }
